ui: creating register ui

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,15 @@
 @tailwind utilities;
 
 @layer base {
-    .inp{
-        @apply border-solid border-2 border-sky-400;
-    }
+  .inp {
+    @apply border-solid border-2 border-sky-400;
+  }
+
+  input {
+    @apply w-full px-3 py-1 border border-gray-300 rounded-md shadow-sm;
+  }
+
+  button {
+    @apply w-full items-center px-4 py-2 border border-transparent rounded-md shadow-sm bg-[#ffd803];
+  }
 }
