--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  input {
+    @apply w-full px-3 py-1 border border-gray-300 rounded-md shadow-sm;
+  }
+
+  button {
+    @apply w-full items-center px-4 py-2 border border-transparent rounded-md shadow-sm bg-[#ffd803];
+  }
+}
