--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap");
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
@@ -20,7 +24,25 @@
 
 @layer components {
   .cardStyle {
-    @apply bg-secondary rounded-2xl border-2 hover:shadow-md hover:shadow-slate-400 duration-300 transition ease-in-out cursor-pointer;
+    @apply bg-white rounded-2xl hover:shadow-md hover:scale-90 duration-300 transition ease-in-out cursor-pointer;
+  }
+
+  h1 {
+    font-family: "Sansita", sans-serif;
+  }
+  h2 {
+    font-family: "Poppins", sans-serif;
+  }
+
+  h1,
+  h2,
+  h3,
+  p {
+    @apply text-paraghraph-text;
+  }
+
+  .logoText {
+    font-family: "Fugaz One", cursive;
   }
 
   .eventTitle,
@@ -43,5 +65,31 @@
 
   .iconAnimation {
     @apply border-[1px] text-button-text bg-button-main rounded-full p-2 w-fit hover:bg-button-hover hover:text-button-text-hover duration-300 transition ease-in-out cursor-pointer;
+  }
+
+  .buttonAnimation {
+    font-family: "Poppins", sans-serif;
+    @apply px-6 py-2  font-semibold text-paraghraph-text rounded-full hover:text-button-text-hover hover:bg-background-tertiary duration-300 transition ease-in-out cursor-pointer;
+  }
+
+  .buttonStyle {
+    @apply px-6 py-4 rounded-full text-button-text font-semibold bg-button-main;
+  }
+
+  .buttonLoad {
+    font-family: "Poppins", sans-serif;
+    @apply px-8 py-3 bg-background-tertiary font-semibold text-paraghraph-text rounded-full hover:text-button-text-hover hover:bg-highlight-color duration-300 transition ease-in-out cursor-pointer;
+  }
+
+  #inputSearch {
+    @apply focus:outline-none shadow-none border-t-2 border-l-2 border-b-2  duration-300 transition ease-in-out cursor-pointer;
+  }
+
+  .categoryStyle {
+    @apply p-8 text-button-text bg-button-main rounded-full w-fit hover:bg-button-hover hover:text-button-text-hover duration-300 transition ease-in-out cursor-pointer;
+  }
+
+  .floatingStyle {
+    @apply flex absolute items-center justify-center;
   }
 }
