--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .card {
+    @apply w-40 h-24 pt-4 rounded-2xl uppercase bg-cust-bg text-center;
+  }
+  .change {
+    @apply scale-105 bg-scd text-white rounded-2xl px-3;
+  }
+}
