feat: add some icon

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -106,6 +106,10 @@
     @apply px-4 py-3 rounded-md w-full border-2 hover:border-highlight-color focus:outline-none;
   }
 
+  .loginButton {
+    @apply px-4 py-3 rounded-md w-full bg-highlight-color font-semibold text-base;
+  }
+
   .buttonLoad {
     font-family: "Poppins", sans-serif;
     @apply px-8 py-3 bg-background-tertiary font-semibold text-paraghraph-text rounded-full hover:text-button-text-hover hover:bg-highlight-color duration-300 transition ease-in-out cursor-pointer;
