--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,11 +26,15 @@
 }
 
 @layer components {
+  .logoutButton {
+    @apply font-semibold rounded-xl text-white text-sm px-4 py-2 bg-button-main hover:bg-button-hover hover:text-paraghraph-text duration-300 transition ease-in-out cursor-pointer;
+  }
+
   .card {
     @apply w-40 h-24 pt-4 rounded-2xl uppercase bg-cust-bg text-center;
   }
-  .change {
-    @apply scale-105 bg-scd text-white rounded-2xl px-3;
+  .linkStyle {
+    @apply py-2 px-4 font-semibold text-paraghraph-text rounded-full hover:text-paraghraph-text hover:bg-background-tertiary duration-300 transition ease-in-out cursor-pointer;
   }
 
   .registerInput {
